--- a/NJLive/web/challenge/content.xhtml
+++ b/NJLive/web/challenge/content.xhtml
@@ -4,7 +4,8 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui"
-    xmlns:fn="http://java.sun.com/jsp/jstl/core"
+    xmlns:c="http://java.sun.com/jsp/jstl/core"
+    xmlns:fn="http://java.sun.com/jsp/jstl/functions"
     template="template/begins.xhtml">
 
     <ui:define name="content">
@@ -28,7 +29,11 @@
                                 <h:outputText value="&amp;&#35;#{64+(indexKey+1)};" escape="false"/>
                             </p:column>
                             <p:column headerText="Name problem" width="45%" styleClass="text-left" >
-                                <h:commandLink value="#{p.nameProblem}" />
+                                <h:outputLink 
+                                    target="_blank"
+                                    value="#{fn:replace(roomContentBean.getRealPathToPdf(p.idProblem), '\\\\', '/' )}">
+                                    #{p.nameProblem}
+                                </h:outputLink> 
                             </p:column>
                             <p:column headerText="Category" width="50%" styleClass="text-left" >
                                 <ui:repeat var="c" value="#{p.listCategoryMessage.list}" varStatus="unitcategory">
