--- a/NJLive/web/challenge/submit.xhtml
+++ b/NJLive/web/challenge/submit.xhtml
@@ -15,7 +15,7 @@
                 <fieldset>
                     <div class="form-group">
                         <label for="select-problem" class="col-md-1 control-label">Problem</label>
-                        <div class="col-md-5">
+                        <div class="col-md-2">
                             <p:selectOneMenu id="select-problem"
                                              styleClass="selected-list form-control"
                                              style="width: 100%;"
@@ -27,7 +27,7 @@
                             </p:selectOneMenu>
                         </div>
                         <label for="select-language" class="col-md-1 control-label">Language</label>
-                        <div class="col-md-5">
+                        <div class="col-md-2">
                             <p:selectOneMenu id="select-language"
                                              styleClass="selected-list form-control"
                                              style="width: 100%;"
@@ -38,23 +38,23 @@
                                 <f:selectItems value="#{roomSubmitBean.listLanguageProgrammingItems}" />                                               
                             </p:selectOneMenu>
                         </div>
-                        <label for="upload-sourceCode" class="col-md-1 control-label">Source Code</label>
-                        <div class="col-md-5">
+                        <label for="upload-sourceCode" class="col-md-2 control-label">Source Code</label>
+                        <div class="col-md-4">
                             <p:fileUpload id="upload-sourceCode"
                                           styleClass="form-control center-block"
                                           value="#{roomSubmitBean.fileSourceCode}"
                                           mode="simple"
+                                          skinSimple="true"
                                           required="true"
                                           allowTypes="/(\.|\/)(java|cpp|c)$/"
                                           label="#{msg['general.label.archivo.upload']}" />
-
                         </div>
                     </div>
                     <div class="form-group text-center">
                         <p:commandButton styleClass="btn btn-default btn-sm center-block text-center"
                                          value="Send solution"
-                                         action="#{roomSubmitBean.actionSubmitSourceCode}"
                                          ajax="false"
+                                         action="#{roomSubmitBean.actionSubmitSourceCode}"
                                          update="msgs, @form"/>
                     </div>
                 </fieldset>
@@ -64,48 +64,53 @@
         <div class="well">
             <fieldset>
                 <div class="form-group">
-                    <h:form id="form-submits-client" class="form-horizontal" >
-                        <p:dataTable id="table-problems-client"
-                                     widgetVar="widgetSubmitsClient"
-                                     tableStyleClass="table table-striped table-hover"
-                                     value="#{roomSubmitBean.listSubmits}"
-                                     var="s"
-                                     styleClass="center-block"
-                                     rowKey="#{s.idSubmit}"
-                                     rowIndexVar="indexKey"
-                                     paginator="false"
-                                     paginatorPosition="bottom"                                     
-                                     emptyMessage="#{msg['general.table.noinfo']}">
-                            <p:column headerText="#" width="5%" styleClass="text-center" >
-                                #{indexKey + 1}
-                            </p:column>
-                            <p:column headerText="Key" width="5%" styleClass="text-center" >
-                                <h:outputText value="#{roomSubmitBean.mapLettersGlobs[s.idProblem]}" />
-                            </p:column>
-                            <p:column headerText="Problem" width="20%" styleClass="text-left" >
-                                <h:outputText value="#{s.nameProblem}" />
-                            </p:column>
-                            <p:column headerText="Language" width="10%" styleClass="text-center" >
-                                <h:outputText value="#{s.nameLanguage}" />
-                            </p:column>
-                            <p:column headerText="Date Submit" width="15%" styleClass="text-center" >
-                                <h:outputText value="#{s.dateSubmit}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy - HH:mm:ss" />
-                                </h:outputText>
-                            </p:column>
-                            <p:column headerText="Status" width="20%" styleClass="text-center" >
-                                <h:outputText value="#{s.nameStatus}" />
-                            </p:column>
-                            <p:column width="10%" styleClass="text-center" >
-                                <ui:fragment rendered="#{s.idStatus eq 'AC'}" >
-                                    <img src="#{roomSubmitBean.mapColorsGlogs[s.idProblem]}" class="globe-center"  />
-                                </ui:fragment>
-                                <ui:fragment rendered="#{s.idStatus ne 'AC'}" >
-                                    <h:outputText value="-/-" styleClass="text-center" />
-                                </ui:fragment>
-                            </p:column>
-                        </p:dataTable>
-                    </h:form>
+                    <p:dataTable id="table-problems-client"
+                                 widgetVar="widgetSubmitsClient"
+                                 tableStyleClass="table table-striped table-hover"
+                                 value="#{roomSubmitBean.listSubmits}"
+                                 var="s"
+                                 rowStyleClass="#{s.nameStatus eq 'ACCEPTED'?
+                                                  'success': (s.nameStatus eq 'WRONG ANSWER'?
+                                                  'danger': (s.nameStatus eq 'TIME LIMIT'?
+                                                  'warning': (s.nameStatus eq 'RUNTIME ERROR'?
+                                                  'info': (s.nameStatus eq 'COMPILATION ERROR'?
+                                                  'warning': null)))) }"
+                                 styleClass="center-block"
+                                 rowKey="#{s.idSubmit}"
+                                 rowIndexVar="indexKey"
+                                 paginator="false"
+                                 paginatorPosition="bottom"                                     
+                                 emptyMessage="#{msg['general.table.noinfo']}">
+                        <p:column headerText="#" width="5%" styleClass="text-center" >
+                            #{indexKey + 1}
+                        </p:column>
+                        <p:column headerText="Key" width="5%" styleClass="text-center" >
+                            <h:outputText value="#{roomSubmitBean.mapLettersGlobs[s.idProblem]}" />
+                        </p:column>
+                        <p:column headerText="Problem" width="20%" styleClass="text-left" >
+                            <h:outputText value="#{s.nameProblem}" />
+                        </p:column>
+                        <p:column headerText="Language" width="10%" styleClass="text-center" >
+                            <h:outputText value="#{s.nameLanguage}" />
+                        </p:column>
+                        <p:column headerText="Date Submit" width="15%" styleClass="text-center" >
+                            <h:outputText value="#{s.dateSubmit}" >
+                                <f:convertDateTime pattern="dd MMM yyyy - HH:mm:ss" />
+                            </h:outputText>
+                        </p:column>
+                        <p:column headerText="Status" width="20%" styleClass="text-center" >
+                            <h:outputText value="#{s.nameStatus}" />
+                        </p:column>
+                        <p:column width="10%" styleClass="text-center" >
+                            <ui:fragment rendered="#{s.idStatus eq 'AC'}" >
+                                <img src="#{roomSubmitBean.mapColorsGlogs[s.idProblem]}" class="globe-center"  />
+                            </ui:fragment>
+                            <ui:fragment rendered="#{s.idStatus ne 'AC'}" >
+                                <h:outputText value="-/-" styleClass="text-center" />
+                            </ui:fragment>
+                        </p:column>
+                    </p:dataTable>
+
                 </div>
             </fieldset> 
         </div>
