- Revision entregable de despliegue

--- a/NJWeb/web/modules/content/problem/create.xhtml
+++ b/NJWeb/web/modules/content/problem/create.xhtml
@@ -121,7 +121,8 @@
 
                     <div class="form-group text-center">
                         <p:commandButton id="btn-create-problem" update="@form" ajax="false" styleClass="btn btn-default"
-                                         value="Crear problema" actionListener="#{problemsBean.actionCreateOneProblem}"/>
+                                         value="Crear problema"
+                                         actionListener="#{problemsBean.actionCreateOneProblem}"/>
                     </div>
                 </fieldset>
             </h:form>
