--- a/NJWeb/web/modules/content/problem/view-problem.xhtml
+++ b/NJWeb/web/modules/content/problem/view-problem.xhtml
@@ -28,6 +28,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="form-group">
+                        <h:outputText value="#{problemsBean.pathSourceProblem}" />
                         <iframe src="#{problemsBean.pathSourceProblem}"
                                 style="width: 100%;"
                                 height="600"
